# typst-bot

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: docker.yml  rust.yml
bot/: Cargo.toml  build.rs
bot/src/: bot.rs  main.rs  worker.rs
crates/bot/: Cargo.toml  build.rs
crates/bot/src/: bot.rs  main.rs  worker.rs
crates/protocol/: Cargo.toml
crates/worker/: Cargo.toml
crates/worker/src/: diagnostic.rs  main.rs  render.rs  sandbox.rs
fonts/: DejaVuSansMono-Bold.ttf.deflate  DejaVuSansMono.ttf.deflate  LinLibertine_R.ttf.deflate  LinLibertine_RB.ttf.deflate  LinLibertine_RBI.ttf.deflate  LinLibertine_RI.ttf.deflate  NewCMMath-Book.otf.deflate  NewCMMath-Regular.otf.deflate  TwitterColorEmoji.ttf.deflate
protocol/src/: lib.rs
src/: bot.rs  main.rs  render.rs  sandbox.rs
worker/: Cargo.toml  build.rs
worker/src/: diagnostic.rs  file.rs  main.rs  package.rs  render.rs  sandbox.rs
