[package]
edition = "2021"
name = "typst-bot"
version = "0.1.0"

[dependencies]
bincode = "1"
flate2 = "1"
poise = { version = "0.5", default_features = false, features = [
	"cache",
	"time",
] }
protocol = { path = "../protocol" }
serenity = { version = "0.11", default_features = false, features = [
	"rustls_backend",
] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
typst = { git = "https://github.com/typst/typst" }
