[package]
edition = "2021"
name = "typst-bot"
version = "0.1.0"

[dependencies]
anyhow = "1"
bincode = "1"
flate2 = "1"
poise = { version = "0.6", git = "https://github.com/serenity-rs/poise", default_features = false, features = [
	"cache",
] }
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serenity = { version = "0.12", default_features = false, features = [
	"rustls_backend",
] }
rusqlite = { version = "0.29", features = ["bundled"] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tracing = "0.1"
