[package]
edition = "2021"
name = "worker"
version = "0.1.0"

[dependencies]
ariadne = { version = "0.3", default_features = false }
bincode = "1"
bytemuck = "1"
comemo = "0.3"
image = { version = "0.24", default_features = false, features = ["png"] }
protocol = { path = "../protocol" }
thiserror = "1"
time = "0.3"
ttf-parser = "0.18"
typst = { git = "https://github.com/typst/typst", rev = "7bb4f6df44086b4c1120b227f7ae963e6c2ad5ab" }
typst-library = { git = "https://github.com/typst/typst", rev = "7bb4f6df44086b4c1120b227f7ae963e6c2ad5ab" }

# downloading packages
zune-inflate = { version = "0.2", default_features = false, features = [
	"gzip",
	"std",
] }
tar = "0.4"
ureq = "2"

[build-dependencies]
cargo_metadata = "0.15"
