[package]
edition = "2021"
name = "worker"
version = "0.1.0"

[dependencies]
ariadne = { version = "0.3", default_features = false }
bincode = "1"
bytemuck = "1"
comemo = "0.3"
image = { version = "0.24", default_features = false, features = ["png"] }
protocol = { path = "../protocol" }
thiserror = "1"
time = "0.3"
ttf-parser = "0.18"
typst = { git = "https://github.com/typst/typst", rev = "c1bc529986f723f8bb06feedfbdc98520763ceb9" }
typst-library = { git = "https://github.com/typst/typst", rev = "c1bc529986f723f8bb06feedfbdc98520763ceb9" }
typst-render = { git = "https://github.com/typst/typst", rev = "c1bc529986f723f8bb06feedfbdc98520763ceb9" }

# downloading packages
zune-inflate = { version = "0.2", default_features = false, features = [
	"gzip",
	"std",
] }
tar = "0.4"
ureq = "2"

[build-dependencies]
cargo_metadata = "0.15"
