[package]
edition = "2021"
name = "typst-bot"
version = "0.1.0"

[dependencies]
anyhow = "1"
bincode = "1"
flate2 = "1"
poise = { version = "0.6", git = "https://github.com/serenity-rs/poise", default_features = false, features = [
	"cache",
] }
protocol = { path = "../protocol" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serenity = { version = "0.12", default_features = false, features = [
	"rustls_backend",
] }
strip-ansi-escapes = "0.2.0"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tracing = "0.1"
