[package]
edition = "2021"
name = "typst-bot"
version = "0.1.0"

[dependencies]
anyhow = "1"
bincode = "1"
bytes = "1"
flate2 = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
protocol = { path = "../protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tracing = "0.1"

[features]
default = ["tags"]
tags = []
