[package]
edition = "2021"
name = "worker"
version = "0.1.0"

[dependencies]
ariadne = { version = "0.6", default-features = false }
bincode = "1"
bytemuck = "1"
comemo = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
protocol = { path = "../protocol" }
thiserror = "2"
time = "0.3"
ttf-parser = "0.25"
typst = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
typst-dev-assets = { git = "https://github.com/typst/typst-dev-assets.git", rev = "fe6cad9" }
typst-render = "0.14.2"

# downloading packages
zune-inflate = { version = "0.2", default-features = false, features = [
	"gzip",
	"std",
] }
tar = "0.4"
ureq = "3"

[build-dependencies]
cargo_metadata = "0.23"
